# ai

./: .gitignore  README.md  requirements.txt  train.py
deep_q_learning_course/: README.md  implementation_notes.md  pyproject.toml
deep_q_learning_course/agents/: deep_q_network.py  q_table.py
deep_q_learning_course/common/: utils.py
deep_q_learning_course/exercises/: hardcoded_policy.py
deep_q_learning_course/section2/: exercise1.py  exercise2.py  exercise3.py
deep_q_learning_course/section3/: agent.py  exercise1.py  network.py
dql_course/common/: wrappers.py
dql_course/exercises/: __init__.py  deep_q_learning.py  deep_q_learning_atari.py  q_learning.py  random_policy.py
gym_dqn/: dqn.py
junk/gym_dqn/: README.md
junk/gym_policy/: policy.py
mnist_classifier/: README.md  mnist.py  pyproject.toml
mnist_gan/: README.md  dcgan.py  pyproject.toml  requirements.txt
