[tool.poetry]
name = "Deep Q Learning Paper to Code"
version = "0.1.0"
description = "Implementations from following 'Modern Reinforcement Learning: Deep Q Learning in PyTorch"
authors = ["Emil Lynegaard"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
