[tool.poetry]
name = "Deep Q Learning Paper to Code"
version = "0.1.0"
description = "Implementations from following 'Modern Reinforcement Learning: Deep Q Learning in PyTorch"
authors = ["Emil Lynegaard"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gym = {version = "^0.24.0", extras = ["toy_text"]}
pylint = "^2.14.0"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
tornado = "^6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
