[tool.poetry]
name = "mnist_classifier"
version = "0.1.0"
description = "Small CONV classifier for MNIST"
authors = ["Emil Lynegaard"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "~1.5.1"
torchvision = "~0.6.1"
pytorch-lightning = "0.8.1"

[tool.poetry.dev-dependencies]
pylint = "2.4.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
