[tool.poetry]
name = "mnist_gan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torchvision = "0.6.1"
numpy = "1.18.5"
matplotlib = "3.1.2"
pytorch-lightning = "0.8.1"

[tool.poetry.dev-dependencies]
pylint = "2.4.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
